infrastructure/base/configs/metrics-server/network-policies.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: forbid-metrics-server-internet-access
  namespace: kube-system
spec:
  podSelector:
    matchLabels:
      k8s-app: metrics-server
  policyTypes:
  - Egress
  egress:
  - to:
    - ipBlock:
        cidr: 10.0.0.0/8
    - ipBlock:
        cidr: 172.16.0.0/12
    - ipBlock:
        cidr: 192.168.0.0/16
